<resources>
    <string name="app_name">WaveApp</string>
    <string name="artist_name_st">Sơn Tùng M-TP</string>
    <string name="monthly_listeners">1,9 tr người nghe hằng tháng</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers_count">%1$d followers</string>
    <string name="shuffle">Shuffle</string>
    <string name="play">Play</string>
    <string name="popular">Phổ biến</string>
    <string name="artist_image">Ảnh nghệ sĩ</string>
    <string name="back">Back</string>
    <string name="search_hint">Tìm trên trang này</string>
    <string name="sort">Sắp xếp</string>
    <string name="playlist_art">Ảnh bìa danh sách</string>
    <string name="add_to_library">Thêm vào thư viện</string>
    <string name="playlist_info">186.787 lượt lưu - 3 giờ 19 phút</string>
    <string name="spotify">Spotify</string>

    <!-- Info Song Strings -->
    <string name="liked_songs">Songs</string>
    <string name="more">More</string>
    <string name="song_title_sample">Call Out My Name</string>
    <string name="artist_name_sample">The Weeknd</string>
    <string name="current_time_sample">0:13</string>
    <string name="total_time_sample">-3:34</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="connect_device">Connect to device</string>
    <string name="share">Share</string>
    <string name="queue">Queue</string>
    <string name="repeat">Repeat</string>
    <string name="lyrics_preview">Lyrics preview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>